@@ -1,1 +1,11 @@
 # OddValueIdentifier
+
+Given a sequence of key-value pairs, identify, for each key, which number of values occur an odd number of times.
+
+How to use locally:
+
+In IntelliJ:
+* Click 'Edit Configurations'
+* Click 'Modify Options'
+* Click 'Add VM Options'
+* Add the following '--add-exports java.base/sun.nio.ch=ALL-UNNAMED'
